--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,13 @@
   letter-spacing: -0.02em;
   text-transform: uppercase;
   text-shadow: 
-    1px 0px 1px DarkGray, 0px 1px 1px DarkGray, 
-    2px 1px 1px DarkGray, 1px 2px 1px DarkGray,
-    3px 2px 1px DarkGray, 2px 3px 1px DarkGray,
-    4px 3px 1px DarkGray, 3px 4px 1px DarkGray,
-    5px 4px 1px DarkGray, 4px 5px 1px DarkGray,
-    6px 5px 1px DarkGray, 5px 6px 1px DarkGray,
-    7px 6px 1px DarkGray;
+  1px 0px 1px DarkGray, 0px 1px 1px DarkGray, 
+  2px 1px 1px DarkGray, 1px 2px 1px DarkGray,
+  3px 2px 1px DarkGray, 2px 3px 1px DarkGray,
+  4px 3px 1px DarkGray, 3px 4px 1px DarkGray,
+  5px 4px 1px DarkGray, 4px 5px 1px DarkGray,
+  6px 5px 1px DarkGray, 5px 6px 1px DarkGray,
+  7px 6px 1px DarkGray;
 }
 
 h3 {
@@ -72,7 +72,7 @@ footer {
 
 body {
   /* Typography Declarations */
-  
+
   color: #222222;
   font-size: 1em;
   font-family: "Source Sans", "Helvetica Neue", sans-serif;
@@ -81,14 +81,37 @@ body {
 .introduction > p,
 .location > p,
 .content-footer > p {
-    /* Typography Declarations */
-    font-weight: 300;
-    letter-spacing: 0.05em;
+  /* Typography Declarations */
+  font-weight: 300;
+  letter-spacing: 0.05em;
 }
 
 .questions-section > h2 {
-    /* Typography Declarations */
-    font-family: "Gentium Book Basic", Georgia, serif;
-    font-size: 1.2em;
-    font-weight: bold;
+  /* Typography Declarations */
+  font-family: "Gentium Book Basic", Georgia, serif;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+a {
+  color: darkblue;
+  text-decoration: none; /* no underline */
+}
+
+.social li {
+  padding-right: 1em;
+}
+
+@media only screen and (max-width: 500px) {
+  .masthead {
+    padding: 3em 0;
+  }
+
+  .masthead-heading {
+    font-size: 3em;
+  }
+
+  .content-footer > p {
+    font-size: 0.8em;
+  }
 }
